--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -45,9 +45,7 @@
   text-align: center;
 }
 
-.contact-info {
-  text-align: left;
-}
+
 
 .contact-info h1 {
   margin-bottom: 80px;
